--- a/portfolio.html
+++ b/portfolio.html
@@ -45,25 +45,50 @@
             <hr>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="http://placekitten.com/200/150">
+                     <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://placekitten.com/200/150" alt="Card image cap">
+                                <div class="card-body">
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                              </div>
                 </div>
                 <div class="col-md-4">
-                        <img src="http://placekitten.com/200/150">
+                        <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://placekitten.com/200/150" alt="Card image cap">
+                                <div class="card-body">
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                              </div>
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="http://placekitten.com/200/150">
+                        <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://placekitten.com/200/150" alt="Card image cap">
+                                <div class="card-body">
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                              </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="http://placekitten.com/200/150">
+                        <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://placekitten.com/200/150" alt="Card image cap">
+                                <div class="card-body">
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                              </div>
                 </div>
             </div>
             <br>
             <div class="row">
                  <div class="col-md-4">
-                    <img src="http://placekitten.com/200/150">
+                        <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="https://placekitten.com/200/150" alt="Card image cap">
+                                <div class="card-body">
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                              </div>
                 </div>
             </div>
             <br>
